<resources>
    <string name="app_name">TrackTrainer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="register_button_text">Registrarse</string>
    <string name="no_tienes_cuenta_registrate">No tienes cuenta. Registrate!</string>
    <string name="se_te_olvid_la_contrase_a">¿Se te olvidó la contraseña?</string>
    <string name="recuperacion_email_hint">Introduce tu correo para recuperar contraseña</string>
    <string name="solicitar_codigo">Solicitar Código</string>
    <string name="introduce_codigo">Introduce el Código</string>
    <string name="enviar_codigo">Enviar Código</string>
    <string name="nueva_contrasena_hint">Nueva Contraseña</string>
    <string name="cambiar_contrasena_button_text">Cambiar Contraseña</string>
    <string name="cargando">Cargando...</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nickname">Nickname</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirma_contrase_a">Confirma Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrasena_hint">Confirmar Contraseña</string>

    <string name="terms_acceptance">1. Acceptance of the Terms\n\nBy using our exercise tracking application, you agree to comply with and be bound by these terms and conditions. If you do not agree with these terms, do not use our application.</string>

    <string name="terms_registration">2. Registration and Accounts\n\nBy creating an account, you warrant that the information provided is true, accurate, and complete. You are responsible for maintaining the confidentiality of your account and password.</string>

    <string name="terms_privacy">3. Privacy\n\nWe value your privacy. <a href="link_to_privacy">See our Privacy Policy</a> for details on how we handle your information.</string>

    <string name="terms_acceptable_use">4. Acceptable Use\n\nYou must use our app in a way that does not cause harm, is illegal, or fraudulently. You must not attempt to access our app unauthorized.</string>

    <string name="terms_intellectual_property">5. Intellectual Property\n\nThe content of this application is owned by DevRiders and is protected by copyright laws. You may not copy, redistribute, or resell our content without our permission.</string>

    <string name="terms_limitation">6. Limitation of Liability\n\nOur application is provided "as is". We do not guarantee it will be perfectly suitable for your specific needs. DevRiders shall not be liable for any injury, loss, or damage related to the use of this application.</string>

    <string name="terms_advertising">7. Advertising and Promotions\n\nWe may display advertisements and promotions. We are not responsible for the content of the ads or any transaction you may conduct with an advertiser.</string>

    <string name="terms_termination">8. Termination\n\nWe reserve the right to close or suspend your account if you violate these terms.</string>

    <string name="terms_changes">9. Changes to the Terms\n\nWe may update these terms at any time. It is your responsibility to review these terms regularly.</string>

    <string name="terms_law">10. Applicable Law and Jurisdiction\n\nThese terms are governed by the laws of Chile. Any dispute will be resolved in the courts of Santiago, Chile.</string>

    <string name="terms_contact">11. Contact\n\nFor any inquiries about these terms, contact us at devriderssolutions@gmail.com.</string>

    <!-- Privacy Policy -->
    <string name="privacy_info">1. Information We Collect\n\nWe collect information directly provided by the user when registering and using our application, which may include name, email address, date of birth, gender, and data related to your physical activity and exercise goals.</string>
    <string name="privacy_use">2. How We Use Your Information\n\nWe use the collected information to:\n\nProvide and enhance our service.\nAnswer your queries or requests.\nSend communications, including promotional ones.\nMonitor and analyze trends and usages.</string>
    <string name="privacy_share">3. Sharing Your Information\n\nWe do not sell or share your personal information with third parties for commercial purposes. We might share your information only under the following circumstances:\n\nWith service providers working on our behalf.\nIf required by law.\nIn relation to any merger, sale of company assets, financing or acquisition.</string>
    <string name="privacy_ads">4. Advertising and Cookies\n\nWe use cookies and other technologies to collect information about our applications usage and to deliver interest-based advertising.</string>
    <string name="privacy_security">5. Security\n\nWe take measures to protect your information against loss, theft, misuse, and unauthorized access.</string>
    <string name="privacy_access">6. Access and Modification\n\nUsers can access, correct or delete their personal information by contacting our team.</string>
    <string name="privacy_links">7. Links to Other Sites\n\nOur application may contain links to other sites. We are not responsible for the privacy practices of such sites.</string>
    <string name="privacy_changes">8. Changes to this Policy\n\nWe may occasionally update this policy. If we make significant changes, we will notify you.</string>
    <string name="privacy_contact">9. Contact\n\nIf you have questions about this privacy policy, contact us at devriderssolutions@gmail.com.</string>

    <string name="privacy_policy">Política de Privacidad</string>



</resources>