<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.welcome.auth.RecuperacionActivity">

    <!-- TextInputLayout para el Correo Electrónico -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmailRecuperacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="none"
        app:startIconDrawable="@drawable/baseline_email_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailRecuperacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recuperacion_email_hint"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para Solicitar Código -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSolicitarCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/solicitar_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmailRecuperacion"
        app:cornerRadius="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    <!-- TextInputLayout para introducir el Código -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="none"
        app:startIconDrawable="@drawable/baseline_vpn_key_black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSolicitarCodigo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_codigo"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para Enviar el Código -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEnviarCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/enviar_codigo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCodigo"
        app:cornerRadius="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
